Changed the namespaces of the example tests to make it more obvious when things should fail Added some named tests and capturing Debug.Assert and Trace.Assert
--HG--
extra : convert_revision : svn%3Afeebac22-3a02-2946-87e6-b637fb197462%408

--- a/resharper/tests.xunitcontrib.runner.resharper.manual/tests.xunitcontrib.runner.resharper.manual.csproj
+++ b/resharper/tests.xunitcontrib.runner.resharper.manual/tests.xunitcontrib.runner.resharper.manual.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{CF3F077B-86D3-497C-B896-D64BFB7F3994}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>tests.xunitcontrib.runner.resharper.manual</RootNamespace>
+    <RootNamespace>tests</RootNamespace>
     <AssemblyName>tests.xunitcontrib.runner.resharper.manual</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
