--- a/resharper/xunitcontrib.runner.resharper/xunitcontrib.runner.resharper.csproj
+++ b/resharper/xunitcontrib.runner.resharper/xunitcontrib.runner.resharper.csproj
@@ -107,7 +107,7 @@
     <Reference Include="System.Xml" />
     <Reference Include="xunit, Version=1.1.0.1323, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\3rdParty\xunit.dll</HintPath>
+      <HintPath>..\..\3rdParty\xUnit.net-1.1\xunit.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
