--- a/resharper/xunitcontrib.runner.resharper.4.1/xunitcontrib.runner.resharper.4.1.csproj
+++ b/resharper/xunitcontrib.runner.resharper.4.1/xunitcontrib.runner.resharper.4.1.csproj
@@ -8,12 +8,16 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>XunitContrib.Runner.ReSharper</RootNamespace>
-    <AssemblyName>xunitcontrib.runner.resharper</AssemblyName>
+    <AssemblyName>xunitcontrib.runner.resharper.4.1</AssemblyName>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
     <OldToolsVersion>2.0</OldToolsVersion>
     <UpgradeBackupLocation>
     </UpgradeBackupLocation>
+    <SccProjectName>SAK</SccProjectName>
+    <SccLocalPath>SAK</SccLocalPath>
+    <SccAuxPath>SAK</SccAuxPath>
+    <SccProvider>SAK</SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
