Updated to the RTM release of Resharper 4.5 Added progress messages that get displayed in the tree view of the runner, like the built in nunit runner Removed test that only looked for tests in an assembly that referenced xunit. Turns out that only works for assemblies that directly reference xunit. If you use an extension dll, you might not have a direct reference, and no tests get run. Work Item: 1514,1519,959
--HG--
extra : convert_revision : svn%3Afeebac22-3a02-2946-87e6-b637fb197462%4020

--- a/resharper/xunitcontrib.runner.resharper.4.1/xunitcontrib.runner.resharper.4.1.csproj
+++ b/resharper/xunitcontrib.runner.resharper.4.1/xunitcontrib.runner.resharper.4.1.csproj
@@ -115,6 +115,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\CommonAssemblyInfo.cs">
+      <Link>Properties\CommonAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Presentation\XunitTestElement.cs" />
     <Compile Include="Runners\XunitException.cs" />
