Added ReSharper External Annotations file Added two ReSharper Live Templates file (the two files are shortcuts beginning with "a" (e.g. "ae") and the second with the same functionality but with shortcuts beginning with "x". This saves a clash with e.g. nunit) Updated to replace TFS source control bindings with AnkhSVN (bloomin' SvnBridge wouldn't let me check in last big change. Had to recreate via Team Explorer)
Work Item: 2100,1684

--HG--
extra : convert_revision : svn%3Afeebac22-3a02-2946-87e6-b637fb197462%4025

--- a/resharper/xunitcontrib.runner.resharper.provider.4.1/xunitcontrib.runner.resharper.provider.4.1.csproj
+++ b/resharper/xunitcontrib.runner.resharper.provider.4.1/xunitcontrib.runner.resharper.provider.4.1.csproj
@@ -14,10 +14,10 @@
     <OldToolsVersion>2.0</OldToolsVersion>
     <UpgradeBackupLocation>
     </UpgradeBackupLocation>
-    <SccProjectName>SAK</SccProjectName>
-    <SccLocalPath>SAK</SccLocalPath>
-    <SccAuxPath>SAK</SccAuxPath>
-    <SccProvider>SAK</SccProvider>
+    <SccProjectName>Svn</SccProjectName>
+    <SccLocalPath>Svn</SccLocalPath>
+    <SccAuxPath>Svn</SccAuxPath>
+    <SccProvider>SubversionScc</SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
