--- a/resharper/tests.xunitcontrib.runner.resharper.runner.4.1/tests.xunitcontrib.runner.resharper.runner.4.1.csproj
+++ b/resharper/tests.xunitcontrib.runner.resharper.runner.4.1/tests.xunitcontrib.runner.resharper.runner.4.1.csproj
@@ -12,10 +12,10 @@
     <AssemblyName>tests.xunitcontrib.runner.resharper.runner.4.1</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SccProjectName>SAK</SccProjectName>
-    <SccLocalPath>SAK</SccLocalPath>
-    <SccAuxPath>SAK</SccAuxPath>
-    <SccProvider>SAK</SccProvider>
+    <SccProjectName>Svn</SccProjectName>
+    <SccLocalPath>Svn</SccLocalPath>
+    <SccAuxPath>Svn</SccAuxPath>
+    <SccProvider>SubversionScc</SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
