Added manual tests for external annotations Fixed assembly name for 4.1 provider Reset project source control bindings to subversion after disastrous attempt to check in via SvnBridge meant a complete rebuild of changes in TFS (if you don't know what I'm talking about, count yourself lucky)
--HG--
extra : convert_revision : svn%3Afeebac22-3a02-2946-87e6-b637fb197462%4026

--- a/resharper/tests.reference.nunit/tests.reference.nunit.csproj
+++ b/resharper/tests.reference.nunit/tests.reference.nunit.csproj
@@ -57,9 +57,11 @@
     <Compile Include="SkippedTests.cs" />
     <Compile Include="TestsInDerivedClasses.cs" />
     <Compile Include="TestsInNestedClasses.cs" />
+    <Compile Include="ExternalAnnotations\VerifyExternalAnnotations.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <Compile Include="ExternalAnnotations\JetBrains.Annotations.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
