Now sets current directory to the location of the test assembly, rather than letting it default to the plugin directory Added test for current directory Updated version number to 0.3.1 Work Item: 2224
--HG--
extra : convert_revision : svn%3Afeebac22-3a02-2946-87e6-b637fb197462%4027

--- a/resharper/tests.xunitcontrib.runner.resharper.manual/tests.xunit.1.5/tests.xunit.1.5.csproj
+++ b/resharper/tests.xunitcontrib.runner.resharper.manual/tests.xunit.1.5/tests.xunit.1.5.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DemonstrateRandomRunningOrder.cs" />
     <Compile Include="ReadsFromConfigFile.cs" />
+    <Compile Include="SetsCurrentDirectoryCorrectly.cs" />
     <Compile Include="SkippedTests.cs" />
     <Compile Include="TestClassLifecycle.cs" />
     <Compile Include="TestsInDerivedClasses.cs" />
