--- a/resharper/tests.xunitcontrib.runner.resharper.manual/tests.xunit.1.1/tests.xunit.1.1.csproj
+++ b/resharper/tests.xunitcontrib.runner.resharper.manual/tests.xunit.1.1/tests.xunit.1.1.csproj
@@ -76,6 +76,7 @@
     <None Include="App.config" />
     <Compile Include="ExternalAnnotations\JetBrains.Annotations.cs" />
     <Compile Include="ExternalAnnotations\VerifyExternalAnnotations.cs" />
+    <Compile Include="SetsCurrentDirectoryCorrectly.cs" />
     <None Include="xunit.console.bat" />
   </ItemGroup>
   <ItemGroup>
