--- a/resharper/tests.xunitcontrib.runner.resharper.manual/tests.xunit.1.5/tests.xunit.1.5.csproj
+++ b/resharper/tests.xunitcontrib.runner.resharper.manual/tests.xunit.1.5/tests.xunit.1.5.csproj
@@ -44,13 +44,13 @@
     </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="xunit, Version=1.4.9.1416, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
+    <Reference Include="xunit, Version=1.5.0.1479, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\3rdParty\xUnit.net-1.5-ctp1\xunit.dll</HintPath>
+      <HintPath>..\..\..\3rdParty\xUnit.net-1.5\xunit.dll</HintPath>
     </Reference>
-    <Reference Include="xunit.extensions, Version=1.4.9.1416, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
+    <Reference Include="xunit.extensions, Version=1.5.0.1479, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\3rdParty\xUnit.net-1.5-ctp1\xunit.extensions.dll</HintPath>
+      <HintPath>..\..\..\3rdParty\xUnit.net-1.5\xunit.extensions.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
