--- a/resharper/tests.xunitcontrib.runner.resharper.runner.5.0/tests.xunitcontrib.runner.resharper.runner.5.0.csproj
+++ b/resharper/tests.xunitcontrib.runner.resharper.runner.5.0/tests.xunitcontrib.runner.resharper.runner.5.0.csproj
@@ -40,6 +40,7 @@
     <Reference Include="JetBrains.ReSharper.TaskRunnerFramework, Version=5.0.1511.105, Culture=neutral, PublicKeyToken=1010a0d8d6380325, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\3rdParty\ReSharper_v5.0\JetBrains.ReSharper.TaskRunnerFramework.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Moq, Version=3.1.416.3, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
