--- a/resharper/xunitcontrib.runner.resharper.provider.5.0/xunitcontrib.runner.resharper.provider.5.0.csproj
+++ b/resharper/xunitcontrib.runner.resharper.provider.5.0/xunitcontrib.runner.resharper.provider.5.0.csproj
@@ -72,6 +72,10 @@
       <HintPath>..\..\3rdParty\ReSharper_v5.0\JetBrains.Platform.ReSharper.Util.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="JetBrains.ReSharper.Daemon, Version=5.0.1528.21, Culture=neutral, PublicKeyToken=1010a0d8d6380325, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\3rdParty\ReSharper_v5.0\JetBrains.ReSharper.Daemon.dll</HintPath>
+    </Reference>
     <Reference Include="JetBrains.ReSharper.Feature.Services, Version=5.0.1511.105, Culture=neutral, PublicKeyToken=1010a0d8d6380325, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\3rdParty\ReSharper_v5.0\JetBrains.ReSharper.Feature.Services.dll</HintPath>
@@ -123,6 +127,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="SuppressUnusedUnitTestElements.cs" />
     <Compile Include="Wrappers\AttributeWrapper.cs" />
     <Compile Include="Wrappers\MethodWrapper.cs" />
     <Compile Include="Wrappers\TypeWrapper.cs" />
