Set CopyLocal false for JetBrains.ReSharper.Daemon
--HG--
extra : convert_revision : svn%3Afeebac22-3a02-2946-87e6-b637fb197462%4037

--- a/resharper/xunitcontrib.runner.resharper.provider.5.0/xunitcontrib.runner.resharper.provider.5.0.csproj
+++ b/resharper/xunitcontrib.runner.resharper.provider.5.0/xunitcontrib.runner.resharper.provider.5.0.csproj
@@ -75,6 +75,7 @@
     <Reference Include="JetBrains.ReSharper.Daemon, Version=5.0.1528.21, Culture=neutral, PublicKeyToken=1010a0d8d6380325, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\3rdParty\ReSharper_v5.0\JetBrains.ReSharper.Daemon.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="JetBrains.ReSharper.Feature.Services, Version=5.0.1511.105, Culture=neutral, PublicKeyToken=1010a0d8d6380325, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
